tests/analyze/remote-def-private/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: A `remote def` must be `public`: `double` is private.
> 4 | remote def double :: fun request int -> task int = fun _req n {
                 ^^^^^^
